--- a/server/package.json
+++ b/server/package.json
@@ -1,16 +1,11 @@
 {
-  "name": "server",
+  "name": "ranikhet-ride-server",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "express": "^5.2.1",
-    "socket.io": "^4.8.3"
+    "socket.io": "^4.7.2"
   }
 }
